--- a/src/main/webapp/WEB-INF/thymeleaf/fragments/headTag.html
+++ b/src/main/webapp/WEB-INF/thymeleaf/fragments/headTag.html
@@ -1,22 +1,35 @@
+<!DOCTYPE html>
+
+<html lang="en">
+
+
 <!--
 PetClinic :: a Spring Framework demonstration
 -->
 
-<head>
+<head th:fragment="headTag">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <title>PetClinic :: a Spring Framework demonstration</title>
 
-    <link th:href="@{/webjars/bootstrap/2.3.0/css/bootstrap.min.css}" rel="stylesheet"/>
-    <link th:href="@{/resources/css/petclinic.css}" rel="stylesheet"/>
+    <link href="http://netdna.bootstrapcdn.com/twitter-bootstrap/2.3.0/css/bootstrap.min.css"
+        th:href="@{/webjars/bootstrap/2.3.0/css/bootstrap.min.css}" rel="stylesheet"/>
+    <link href="../../../resources/css/petclinic.css"
+        th:href="@{/resources/css/petclinic.css}" rel="stylesheet"/>
     
-    <script th:src="@{/webjars/jquery/1.9.0/jquery.js}"></script>
-    <script th:src="@{/webjars/jquery-ui/1.9.2/js/jquery-ui-1.9.2.custom.js}"></script>
+    <script  src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.0/jquery.min.js"
+        th:src="@{/webjars/jquery/1.9.0/jquery.js}"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/jquery-ui.min.js"
+        th:src="@{/webjars/jquery-ui/1.9.2/js/jquery-ui-1.9.2.custom.js}"></script>
     
-    <link th:href="@{/webjars/jquery-ui/1.9.2/css/smoothness/jquery-ui-1.9.2.custom.css}" rel="stylesheet"></link>
+    <link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.9.2/themes/smoothness/jquery-ui.css"
+        th:href="@{/webjars/jquery-ui/1.9.2/css/smoothness/jquery-ui-1.9.2.custom.css}" rel="stylesheet"></link>
     
 </head>
 
+<body>
+</body>
 
+</html>
 
 
 
